<resources>
    <string name="app_name">Lockee</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="register"><b>Create an account</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="own_code"><b>I have a code</b></string>
    <string name="terms">I agree to the terms and conditions</string>
    <string name="registerWelcome">Create an account</string>
    <string name="registerButton">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="wrongLogin"><b>Login information is wrong</b></string>
    <string name="correctRegister"><b>Account successfully registered</b></string>
    <string name="wrongRegister"><b>Register information is wrong</b></string>
    <string name="hint_confirmpassword">Confirm password</string>
    <string name="hint_name">Full name</string>
    <string name="termsNotChecked">Please accept the terms and conditions</string>
    <string name="confirmPasswordWrong">Please confirm the password</string>
    <string name="doubleRegister">An account with this email already exists</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="logout">Logout</string>
    <string name="options_menu">Options menu</string>
    <string name="register_successful">Register successful</string>
</resources>
