<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:id="@+id/welcomeText"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="45dp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:layout_width="96dp"
            android:layout_height="42dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:id="@+id/sign_in"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:layout_marginTop="25dp"
            android:onClick="onLogin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:id="@+id/register"
            android:clickable="true"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/own_code"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:id="@+id/textView"
            android:clickable="true"
            android:layout_gravity="end"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

</LinearLayout>
